--- a/src/css/utilities/lazysizes.css
+++ b/src/css/utilities/lazysizes.css
@@ -1,8 +1,10 @@
-.blur-up {
-    filter: blur(5px);
-    transition: filter 400ms;
-}
+@layer utilities {
+    .blur-up {
+        filter: blur(5px);
+        transition: filter 400ms;
+    }
 
-.blur-up.lazyloaded {
-    filter: blur(0);
+    .blur-up.lazyloaded {
+        filter: blur(0);
+    }
 }
