--- a/src/css/utilities/prose.css
+++ b/src/css/utilities/prose.css
@@ -1,11 +1,13 @@
-.prose p {
-    @apply font-normal text-base;
-}
+@layer utilities {
+    .prose p {
+        @apply font-normal text-base;
+    }
 
-.prose h3 {
-    @apply font-bold text-base;
-}
+    .prose h3 {
+        @apply font-bold text-base;
+    }
 
-.prose a {
-    @apply underline;
+    .prose a {
+        @apply underline;
+    }
 }
