--- a/src/css/utilities/typo.css
+++ b/src/css/utilities/typo.css
@@ -1,7 +1,9 @@
-.typo-title {
-    @apply font-bold text-title;
-}
+@layer utilities {
+    .typo-title {
+        @apply font-bold text-title;
+    }
 
-.typo-body {
-    @apply font-normal text-base;
+    .typo-body {
+        @apply font-normal text-base;
+    }
 }
